More info in about app

--- a/resources/view/Main.fxml
+++ b/resources/view/Main.fxml
@@ -322,6 +322,7 @@
       						<Menu mnemonicParsing="false" text="%menu.help">
       							<items>
       								<MenuItem fx:id="MIAboutUBUGrades" onAction="#aboutApp" text="%menu.about" />
+                        <MenuItem onAction="#moreInfo" text="%menu.moreinfo" />
       							</items>
       						</Menu>
       					</menus>
