--- a/resources/view/AboutApp.fxml
+++ b/resources/view/AboutApp.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -10,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AboutAppController">
   <columnConstraints>
       <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -34,7 +35,7 @@
       </ImageView>
       <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
          <top>
-            <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+            <ImageView fitHeight="150.0" fitWidth="200.0" onMouseClicked="#openGithub" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
                <image>
                   <Image url="@../img/titulo.png" />
                </image>
@@ -60,9 +61,9 @@
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <Label text="Yi Peng Ji" GridPane.rowIndex="1" />
-                  <Label text="Raúl Marticorena Sánchez" GridPane.rowIndex="2" />
-                  <Label layoutX="10.0" layoutY="15.0" text="Carlos Pardo Aguilar" GridPane.rowIndex="3" />
+                  <Hyperlink onAction="#openAuthor1" text="Yi Peng Ji" GridPane.rowIndex="1" />
+                  <Hyperlink layoutX="10.0" layoutY="41.0" onAction="#openAuthor2" text="Raúl Marticorena Sánchez" GridPane.rowIndex="2" />
+                  <Hyperlink layoutX="10.0" layoutY="41.0" onAction="#openAuthor3" text="Carlos Pardo Aguilar" GridPane.rowIndex="3" />
                </children>
             </GridPane>
          </bottom>
@@ -73,31 +74,39 @@
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label prefHeight="100.0" prefWidth="600.0" text="%text.thanks" wrapText="true" GridPane.columnSpan="2" GridPane.rowIndex="1" />
-            <Label text="%text.thankstitle">
+            <Label prefHeight="66.0" prefWidth="700.0" text="%text.thanks" wrapText="true" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+            <Label text="%text.thankstitle" GridPane.rowIndex="1">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
             <GridPane GridPane.columnIndex="1">
               <columnConstraints>
-                <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="TOP" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="TOP" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label text="%text.license" GridPane.columnIndex="1" />
+                  <Hyperlink onAction="#openLicense" text="%text.license">
+                     <GridPane.margin>
+                        <Insets right="10.0" />
+                     </GridPane.margin></Hyperlink>
+                  <Label fx:id="labelJre" text="JRE" wrapText="true" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets right="10.0" />
+                     </GridPane.margin></Label>
                </children>
             </GridPane>
          </children>
       </GridPane>
-      <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="577.0" layoutY="435.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2">
+      <ImageView fitHeight="100.0" fitWidth="200.0" layoutX="577.0" layoutY="435.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2">
          <image>
             <Image url="@../img/Logotipo_de_la_Junta_de_Castilla_y_León.svg.png" />
          </image>
@@ -107,7 +116,7 @@
             <Image url="@../img/JCYL_impulsa.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="200.0" fitWidth="280.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="2">
+      <ImageView fitHeight="200.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="2">
          <image>
             <Image url="@../img/logofeder.png" />
          </image>
