--- a/resources/view/Main.fxml
+++ b/resources/view/Main.fxml
@@ -264,6 +264,11 @@
                            <fx:include fx:id="visualization" source="Visualization.fxml" />
                          
                       </Tab>
+                      <Tab fx:id="clusteringTab" text="\%tab.clustering">
+
+                           <fx:include fx:id="clustering" source="Clustering.fxml" />
+
+                      </Tab>
                   
                     </tabs>
                   </TabPane>
