--- a/src/main/resources/view/Main.fxml
+++ b/src/main/resources/view/Main.fxml
@@ -216,8 +216,8 @@
 															<children>
 																<Label layoutX="8.0" layoutY="6.0" text="%label.categoryitem" />
 																<TextField fx:id="tfdItems" layoutX="8.0" layoutY="30.0" prefHeight="28.0" prefWidth="108.0" promptText="%label.filter" />
-																<Label layoutX="123.0" layoutY="36.0" text="%label.type" />
-																<ChoiceBox fx:id="slcType" layoutX="162.0" layoutY="34.0" maxWidth="88.0" minHeight="25.0" prefHeight="25.0" />
+																<Label layoutX="123.0" layoutY="35.0" text="%label.type" />
+																<ChoiceBox fx:id="slcType" layoutX="162.0" layoutY="30.0" maxWidth="88.0" minHeight="25.0" />
 															</children>
 														</Pane>
 													</top>
