--- a/resources/view/Clustering.fxml
+++ b/resources/view/Clustering.fxml
@@ -3,14 +3,19 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.web.WebView?>
+<?import org.controlsfx.control.CheckComboBox?>
 <?import org.controlsfx.control.PropertySheet?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="clustering.controller.ClusteringController">
+<BorderPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="clustering.controller.ClusteringController">
    <top>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -28,11 +33,12 @@
          <children>
 
             <PropertySheet fx:id="propertySheet" modeSwitcherVisible="false" prefHeight="59.0" prefWidth="137.0" searchBoxVisible="false" GridPane.columnIndex="1" GridPane.rowSpan="4" />
-            <Button fx:id="executeBtn" mnemonicParsing="false" text="Button" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-            <CheckBox mnemonicParsing="false" text="%tab.grades" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <CheckBox mnemonicParsing="false" text="%tab.logs" GridPane.columnIndex="2" />
-            <CheckBox mnemonicParsing="false" text="%tab.activityCompletion" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Button fx:id="buttonExecute" mnemonicParsing="false" text="Button" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <CheckBox fx:id="checkBoxGrades" mnemonicParsing="false" text="%tab.grades" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <CheckBox fx:id="checkBoxLogs" mnemonicParsing="false" text="%tab.logs" GridPane.columnIndex="2" />
+            <CheckBox fx:id="checkBoxActivity" mnemonicParsing="false" text="%tab.activityCompletion" GridPane.columnIndex="2" GridPane.rowIndex="3" />
             <ListView fx:id="algorithmList" prefHeight="200.0" prefWidth="200.0" GridPane.rowSpan="4" />
+            <CheckComboBox fx:id="checkComboBoxLogs" title="\%clustering.logsTypes" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.hgrow="NEVER" GridPane.rowIndex="1" />
          </children>
       </GridPane>
    </top>
@@ -47,6 +53,35 @@
         </rowConstraints>
          <children>
             <WebView fx:id="webView" prefHeight="200.0" prefWidth="200.0" />
+            <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" GridPane.columnIndex="1">
+              <tabs>
+                <Tab text="JavaFX">
+                     <content>
+                        <BorderPane prefHeight="200.0" prefWidth="200.0">
+                           <top>
+                              <CheckComboBox fx:id="checkComboBoxCluster" title="Clusters" BorderPane.alignment="BOTTOM_LEFT" />
+                           </top>
+                           <center>
+                              <TableView fx:id="tableView" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                                 <columns>
+                                    <TableColumn fx:id="columnImage" editable="false" prefWidth="54.0" resizable="false" sortable="false" />
+                                    <TableColumn fx:id="columnName" editable="false" text="clustering.fullname" />
+                                    <TableColumn fx:id="columnCluster" editable="false" text="clustering.clusterNumber" />
+                                 </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy></TableView>
+                           </center>
+                        </BorderPane>
+                     </content>
+                </Tab>
+                <Tab text="Tabulator">
+                     <content>
+                        <WebView prefHeight="200.0" prefWidth="200.0" />
+                     </content>
+                </Tab>
+              </tabs>
+            </TabPane>
          </children>
       </GridPane>
    </center>
