--- a/resources/view/AboutApp.fxml
+++ b/resources/view/AboutApp.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -18,12 +20,12 @@
     <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="248.0" minHeight="10.0" prefHeight="166.0" valignment="CENTER" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="281.0" minHeight="10.0" prefHeight="281.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" valignment="CENTER" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <ImageView fitHeight="188.0" fitWidth="264.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
+      <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
          <image>
             <Image url="@../img/Escudo%20Color%20TC.png" />
          </image>
@@ -42,9 +44,12 @@
                <BorderPane.margin>
                   <Insets top="10.0" />
                </BorderPane.margin>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </ImageView>
          </top>
-         <bottom>
+         <center>
             <GridPane BorderPane.alignment="CENTER">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -66,7 +71,7 @@
                   <Hyperlink layoutX="10.0" layoutY="41.0" onAction="#openAuthor3" text="Carlos Pardo Aguilar" GridPane.rowIndex="3" />
                </children>
             </GridPane>
-         </bottom>
+         </center>
       </BorderPane>
       <GridPane GridPane.columnSpan="3" GridPane.rowIndex="1">
         <columnConstraints>
@@ -75,40 +80,40 @@
         </columnConstraints>
         <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="63.0" minHeight="10.0" prefHeight="20.0" valignment="CENTER" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="119.0" minHeight="10.0" prefHeight="119.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label prefHeight="66.0" prefWidth="700.0" text="%text.thanks" wrapText="true" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+            <TextArea fx:id="textArea" editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnSpan="2">
+               <GridPane.margin>
+                  <Insets left="50.0" right="50.0" />
+               </GridPane.margin>
+            </TextArea>
             <Label text="%text.thankstitle" GridPane.rowIndex="1">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
             <GridPane GridPane.columnIndex="1">
-              <columnConstraints>
-                  <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
               <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="TOP" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="TOP" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="57.0" minHeight="10.0" prefHeight="28.0" valignment="TOP" vgrow="SOMETIMES" />
               </rowConstraints>
-               <children>
-                  <Hyperlink onAction="#openLicense" text="%text.license">
-                     <GridPane.margin>
-                        <Insets right="10.0" />
-                     </GridPane.margin></Hyperlink>
-                  <Label fx:id="labelJre" text="JRE" wrapText="true" GridPane.rowIndex="1">
-                     <GridPane.margin>
-                        <Insets right="10.0" />
-                     </GridPane.margin></Label>
-               </children>
             </GridPane>
+            <Hyperlink onAction="#openLicense" text="%text.license" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets right="20.0" />
+               </GridPane.margin>
+            </Hyperlink>
+            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" text="%text.thanks" wrapText="true" GridPane.columnSpan="2" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets left="50.0" right="50.0" />
+               </GridPane.margin>
+            </TextArea>
          </children>
       </GridPane>
-      <ImageView fitHeight="100.0" fitWidth="200.0" layoutX="577.0" layoutY="435.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2">
+      <ImageView fitHeight="90.0" fitWidth="159.0" layoutX="577.0" layoutY="435.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2">
          <image>
-            <Image url="@../img/Logotipo_de_la_Junta_de_Castilla_y_León.svg.png" />
+            <Image url="@../img/Logotipo_de_la_Junta_de_Castilla_y_León.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="200.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="2">
@@ -116,7 +121,7 @@
             <Image url="@../img/JCYL_impulsa.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="200.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="2">
+      <ImageView fitHeight="65.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.rowIndex="2">
          <image>
             <Image url="@../img/logofeder.png" />
          </image>
