--- a/src/main/resources/view/Main.fxml
+++ b/src/main/resources/view/Main.fxml
@@ -217,7 +217,7 @@
 																<Label layoutX="8.0" layoutY="6.0" text="%label.categoryitem" />
 																<TextField fx:id="tfdItems" layoutX="8.0" layoutY="30.0" prefHeight="28.0" prefWidth="108.0" promptText="%label.filter" />
 																<Label layoutX="123.0" layoutY="36.0" text="%label.type" />
-																<ChoiceBox fx:id="slcType" layoutX="162.0" layoutY="34.0" maxWidth="88.0" minHeight="25.0" prefHeight="25.0" />
+																<ChoiceBox fx:id="slcType" layoutX="164.0" layoutY="30.0" maxWidth="88.0" minHeight="25.0" />
 															</children>
 														</Pane>
 													</top>
@@ -291,7 +291,6 @@
       							<items>
       								<MenuItem fx:id="MIChangeCourse" onAction="#changeCourse" text="%menu.changesubject" />
       								<MenuItem fx:id="updateCourse" onAction="#updateCourse" text="%menu.update" />
-      								<MenuItem fx:id="MISaveChart" onAction="#saveChart" text="%menu.savechart" />
       								<MenuItem fx:id="MIExportCSV" onAction="#exportCSV" text="%menu.exportcsv" />
       								<MenuItem fx:id="MILogOut" onAction="#logOut" text="%menu.logout" />
       								<MenuItem fx:id="MIExit" onAction="#closeApplication" text="%menu.exit">
