--- a/src/main/resources/view/Menu.fxml
+++ b/src/main/resources/view/Menu.fxml
@@ -27,6 +27,7 @@
                   <MenuItem fx:id="MIChangeCourse" onAction="#changeCourse" text="%menu.changesubject" />
                   <MenuItem fx:id="updateCourse" onAction="#updateCourse" text="%menu.update" />
                   <MenuItem fx:id="MIExportCSV" onAction="#exportCSV" text="%menu.exportcsv" />
+                  <MenuItem mnemonicParsing="false" onAction="#exportEnrolledUsersPhoto" text="%menu.exportphotos" />
                   <MenuItem fx:id="MILogOut" onAction="#logOut" text="%menu.logout" />
                   <MenuItem fx:id="MIExit" onAction="#closeApplication" text="%menu.exit">
                      <accelerator>
