--- a/resources/view/Clustering.fxml
+++ b/resources/view/Clustering.fxml
@@ -115,7 +115,10 @@
                      <content>
                         <BorderPane prefHeight="200.0" prefWidth="200.0">
                            <center>
-                              <PropertySheet fx:id="propertySheetRename" modeSwitcherVisible="false" searchBoxVisible="false" BorderPane.alignment="CENTER" />
+                              <PropertySheet fx:id="propertySheetRename" modeSwitcherVisible="false" searchBoxVisible="false" BorderPane.alignment="CENTER">
+                                 <BorderPane.margin>
+                                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                                 </BorderPane.margin></PropertySheet>
                            </center>
                            <bottom>
                               <Button fx:id="buttonRename" mnemonicParsing="false" text="Renombrar" BorderPane.alignment="CENTER">
